chore: Increment in table

--- a/new-tags.html
+++ b/new-tags.html
@@ -17,18 +17,22 @@
             <tr>
                 <td style="border: 1px solid #606060; padding: 16px;"><b>Aula</b></td>
                 <td style="border: 1px solid #606060;"><b>Competencia Adquirida</b></td>
+                <td style="border: 1px solid #606060;"><b>Nível</b></td>
             </tr>
             <tr>
                 <td style="border: 1px solid #606060; padding: 10px;"><i>HARD</i></td>
                 <td style="border: 1px solid #606060; padding: 10px;">Aprendizado Técnico de tecnologias</td>
+                <td style="border: 1px solid #606060; padding: 10px;">Máximo</td>
             </tr>
             <tr>
                 <td style="border: 1px solid #606060; padding: 10px;"><i>SOFT</i></td>
                 <td style="border: 1px solid #606060; padding: 10px;">Aprendizado de trabalho em equipe</td>
+                <td style="border: 1px solid #606060; padding: 10px;">Máximo</td>
             </tr>
             <tr>
                 <td style="border: 1px solid #606060; padding: 10px;"><i>INGLÊS</i></td>
                 <td style="border: 1px solid #606060; padding: 10px;">Nível de fluência na língua inglesa</td>
+                <td style="border: 1px solid #606060; padding: 10px;">Máximo</td>
             </tr>            
         </table>
         
