chore: Add coment

--- a/new-tags.html
+++ b/new-tags.html
@@ -50,4 +50,5 @@
         target="_blank"><img style="background-color: #202020;" alt="Logo da Alpha EdTech"
         src="https://static.wixstatic.com/media/3d3594_6a16c57cf43a45148ba18da30afb4ad7~mv2.png/v1/fill/w_196,h_105,al_c,usm_0.66_1.00_0.01,enc_auto/LOGO%201.png" /></a>
     </body>
+    <!–Feito com muita dedicação por Alan –>
 </html>
