chore: Add og on new-tags

--- a/new-tags.html
+++ b/new-tags.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">    
         <title>Usando Tags HTML | Alpha</title>
         <link rel="shortcut icon" href="https://static.wixstatic.com/media/3d3594_71efe0bedca94d52afdf1a69d964da18~mv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/3d3594_71efe0bedca94d52afdf1a69d964da18~mv2.png">
-        <meta property="og:title" content="Entendendo HTML" />        
+        <meta property="og:title" content="Entendendo HTML" />
+        <meta property="og:type" content="website" />
         <meta property="og:url" content="https://github.com/AlanDouglasASouza/module_02_html/blob/main/new-tags.html" />
         <meta property="og:description" content="Entendendo algumas tags e sua importância para a semantica em HTML. O arquivo contém alguns desses elementos essenciais." />
         <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/200px-HTML5_logo_and_wordmark.svg.png" />
