chore: Add pages canvas

--- a/others/first-svg.html
+++ b/others/first-svg.html
@@ -11,7 +11,7 @@
         <h1>O primeiro SVG</h1>
     </footer>
     <section>
-        <img src="../assets/image/first.svg">
+        <img src="../assets/images/first.svg">
     </section>
     <footer style="margin-top: 22%; border-top: 1px solid black">
         <nav>
